[tool.poetry]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
authors = ["Pallets <contact@palletsprojects.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
pytest = "^7.4.0"
coverage = "^7.2.7"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flaskr", "tests"]

[tool.takehomes.tasks]
poetry_install = "poetry install"
run_db_init = "poetry run flask --app flaskr init-db"
run_flask_app = "poetry run flask --app flaskr run --debug"
sqlite_shell = "sqlite3 /projects/flask-with-poetry/instance/flaskr.sqlite"
